# qt_open_cvdemo

./: CMakeLists.txt  LICENSE  README.en.md  README.md
CmakeFuncs/: CmakeFuncsConfig.cmake
src/libs/colorPlugin001/: CMakeLists.txt  ColorPlugin001.h  ColorPlugin001_export.h
src/libs/converQimageOrCvMat/: ConverQimageOrCvMat.cpp  ConverQimageOrCvMat.h
src/libs/copymakeborderPlugin001/: CMakeLists.txt  CopyMakeBorderPlugin001.cpp  CopyMakeBorderPlugin001.h  CopymakeborderPlugin001_export.h
src/libs/filterPlugin001/: CMakeLists.txt  FilterPlugin001.cpp  FilterPlugin001.h
src/libs/fourierPlugin001/: CMakeLists.txt  FourierPlugin001.cpp  FourierPlugin001.h  FourierPlugin001_export.h
src/libs/medianFilterPlugin001/: CMakeLists.txt  MedianFilterPlugin001.h
src/libs/openCVInterface/: CMakeLists.txt  CvPluginInterface.cpp  MedianFilterPlugin.cpp
src/libs/openCVInterface001/: CMakeLists.txt  CvPluginInterface.h  CvPluginInterface001.cpp  CvPluginInterface001.h  MedianFilterPlugin.h  OpenCVInterface_export.h
src/libs/segmentationPlugin001/: CMakeLists.txt  SegmentationPlugin001.h  SegmentationPlugin001_export.h
src/libs/transformPlugin001/: CMakeLists.txt  TransformPlugin001.h  TransformPlugin001_export.h
src/plugins/001/colorPlugin001/: CMakeLists.txt  ColorPlugin001.cpp  ColorPlugin001.h
src/plugins/001/copymakeborderPlugin001/: CMakeLists.txt  CopyMakeBorderPlugin001.h
src/plugins/001/filterPlugin001/: CMakeLists.txt  FilterPlugin001.h  FilterPlugin001_export.h
src/plugins/001/fourierPlugin001/: CMakeLists.txt  FourierPlugin001.h
src/plugins/001/medianFilterPlugin001/: CMakeLists.txt  MedianFilterPlugin001.cpp  MedianFilterPlugin001.h  MedianFilterPlugin001_export.h
src/plugins/001/openCVInterface001/: CMakeLists.txt  OpenCVInterface001.cpp  OpenCVInterface001.h  OpenCVInterface001_export.h
src/plugins/001/segmentationPlugin001/: CMakeLists.txt  SegmentationPlugin001.cpp  SegmentationPlugin001.h
src/plugins/001/transformPlugin001/: CMakeLists.txt  TransformPlugin001.cpp  TransformPlugin001.h
src/plugins/002/colorPlugin002/: CMakeLists.txt  ColorPlugin002.cpp  ColorPlugin002.h  ColorPlugin002_export.h
src/plugins/002/copymakeborderPlugin002/: CMakeLists.txt  CopymakeborderPlugin002.cpp  CopymakeborderPlugin002.h  CopymakeborderPlugin002_export.h
src/plugins/002/filterPlugin002/: CMakeLists.txt  FilterPlugin002.cpp  FilterPlugin002.h  FilterPlugin002_export.h
src/plugins/002/fourierPlugin002/: CMakeLists.txt  FourierPlugin002.cpp  FourierPlugin002.h  FourierPlugin002_export.h
src/plugins/002/openCVInterface002/: CMakeLists.txt  OpenCVInterface002.cpp  OpenCVInterface002.h  OpenCVInterface002_export.h
src/plugins/002/segmentationPlugin002/: CMakeLists.txt  SegmentationPlugin002.cpp  SegmentationPlugin002.h  SegmentationPlugin002_export.h
src/plugins/002/templatePlugin002/: CMakeLists.txt  TemplatePlugin002.cpp  TemplatePlugin002.h  TemplatePlugin002_export.h
src/plugins/002/transformPlugin002/: CMakeLists.txt  TransformPlugin002.cpp  TransformPlugin002.h  TransformPlugin002_export.h
src/res/resources/: CMakeLists.txt
src/res/resourcesDemo011/: CMakeLists.txt
src/uis/demo001/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
src/uis/demo002/: CMakeLists.txt  CvPluginInterface001.h  main.cpp  mainwindow.cpp
src/uis/demo003/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
src/uis/demo004/: CMakeLists.txt
src/uis/demo005/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
src/uis/demo006/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
src/uis/demo007/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  qblinkingwidget.cpp  qblinkingwidget.h
src/uis/demo008/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  qenhancedgraphicsview.cpp  qenhancedgraphicsview.h
src/uis/demo009/: mainwindow.cpp  mainwindow.h  qcustomgraphicseffect.h  qenhancedgraphicsview.cpp  qenhancedgraphicsview.h
src/uis/demo010/: CMakeLists.txt  qcustomgraphicseffect.cpp  qenhancedgraphicsview.cpp  qenhancedgraphicsview.h
src/uis/demo011/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  qenhancedgraphicsview.cpp
src/uis/demo012/: CMakeLists.txt  GraphicsWindow.cpp  GraphicsWindow.h  main.cpp
