CMAKE_MINIMUM_REQUIRED(VERSION 3.5)

find_package(CmakeFuncs REQUIRED PATHS "${CMAKE_CURRENT_SOURCE_DIR}/CmakeFuncs/")
get_current_dir_name(prject_name ${CMAKE_CURRENT_SOURCE_DIR})
message("============ ${prject_name}")
message("name =" ${prject_name})
project(${prject_name} VERSION 0.1 LANGUAGES CXX)
message("============ ${CURRENT_FOLDER}")

set(out_path_list)
get_current_path_dirs(out_path_list ${CMAKE_CURRENT_SOURCE_DIR}/src/uis "CMakeLists.txt")
get_current_path_dirs(out_path_list ${CMAKE_CURRENT_SOURCE_DIR}/src/libs "CMakeLists.txt")
foreach(out_dir ${out_path_list})
	string(REPLACE ${CMAKE_SOURCE_DIR}/ "./" out_path ${out_dir})
	message(STATUS "正在添加路径 :\t" ${out_path})
	ADD_SUBDIRECTORY(${out_path})
endforeach()
